# graphsurge

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
data/large/: edges.txt  vertices.txt
data/livejournal_communities/: edges.txt  vertices.txt
data/paper2/: edges.txt  vertices.txt
data/small/: edges.txt  vertices.txt
data/small_mutiple_types/: edges.txt  vertices.txt
data/small_no_headers/: edges.txt
data/small_properties/: edges.txt  vertices.txt
data/small_properties_call/: edges.txt  vertices.txt
data/small_properties_views/: edges.txt  vertices.txt
data/stackoverflow/: edges_comments_posts_belongs_to.csv  edges_comments_users_created_by.csv  edges_posts_posts_accepted_answer.csv  edges_posts_posts_parent_post.csv  edges_posts_tags_has_tag.csv  edges_posts_users_last_editor.csv  edges_posts_users_owned_by.csv  edges_tags_posts_excerpt_at.csv  edges_tags_posts_wiki_at.csv  edges_users_posts_voted.csv  vertices_comments.csv  vertices_posts.csv  vertices_tags.csv  vertices_users.csv
data/tsp/: att48.txt  bays29.txt  fri26.txt
experiments/: README.md  build_gs_exe.sh  gb_computation.sh  generate_graph_edges_only_space.sh  generate_graph_edges_vertices_comma.sh  gs_computation.sh  run_docker.sh
experiments/6.2/: run_computation.sh
experiments/6.3/: run_computation.sh
experiments/6.5/: create_vcol.sh
experiments/6.6/: run_computation.sh
experiments/computation_queries/: vcol_best_order.bfs.adaptive.txt  (+127 more)
gs_analytics_api/: Cargo.toml
gs_analytics_api/src/: computation_input.rs  lib.rs  property_input.rs
src/: error.rs  global_store.rs  lib.rs  main.rs
(+3677 files in other folders)
